Added HTML to Skills

--- a/index.html
+++ b/index.html
@@ -50,10 +50,6 @@
     <h3>Skills</h3>
     <table cellspacing="10">
       <tr>
-        <td>Computer Hardware</td>
-        <td>★★★★★</td>
-      </tr>
-      <tr>
         <td>Market Analysis</td>
         <td>★★★★☆</td>
       </tr>
@@ -68,6 +64,13 @@
       <tr>
         <td>Microsoft Suite</td>
         <td>★★★★☆</td>
+      </tr>      <tr>
+        <td>Computer Hardware</td>
+        <td>★★★★★</td>
+      </tr>
+      <tr>
+        <td>HTML</td>
+        <td★★★★☆</td>
       </tr>
     </table>
     <hr>
